--- a/src/navbar.css
+++ b/src/navbar.css
@@ -1,6 +1,6 @@
 .nav-bar {
   list-style-type: none;
-  width: 100%;
+  width: 90%;
   display: flex;
   justify-content: space-around;
   position: relative;
