--- a/src/shopitem.css
+++ b/src/shopitem.css
@@ -12,7 +12,7 @@
   width: 260px;
   height: 370px;
   object-fit: contain;
-  outline: 1px solid;
+  outline: 1px solid gray;
   position: relative;
 }
 
@@ -35,15 +35,18 @@
 }
 
 .item-price {
-  text-decoration-line: underline;
   text-align: auto;
   font-size: 110%;
+  color: #b12704;
 }
 
 .shop-content {
   margin: 0 auto;
   height: auto;
   padding-bottom: 30px;
+  padding-left: .5rem;
+  padding-right: .5rem;
+  padding-top: .3rem;
 }
 
 .item-price, .img-box, .item-title {
@@ -53,6 +56,8 @@
 .item-title {
   font-size: 1.1em;
   font-weight: bold;
+  text-align: center;
+
 }
 
 .item-rating {
